--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,11 @@
-title: "Will Russell"
-email: fellowship@mlh.io
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: "Saul Montes De Oca"
+email: a01025975@itesm.mx
+description: 
+  This is my Major League Hacking Fellowship portfolio. Take a look to the awesome projects a worked on during this explorer internship.
 baseurl: "/" 
 url: "/portfolio-template" 
-twitter_username: mlhacks
-github_username:  mlh-fellowship
+twitter_username: SaulMontesDeO10 
+github_username:  saulmontesdeoca
 
 sass:
   sass_dir: _sass
