--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 - course: BSc Computer Science
-  institute: University of Birmingham
-  dates: 2018 - 2021
-  logo: uob.png
+  institute: Tecnológico de Monterrey
+  dates: 2017 - 2022
+  logo: tec.png
   
 - course: Explorer Fellow
   institute: MLH Fellowship
   dates: Fall 2020
-  logo: fellowship.svg
+  logo: mlh.jpg
   
