--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- role: Open Source Fellow
-  company: MLH Fellowship
-  dates: Summer 2020
-  logo: fellowship.svg
+- role: Junior Web Developer
+  company: BNOMICS
+  dates: Jan-Jun 2019
+  logo: bnomics.jpeg
