--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email: a01025975@itesm.mx
 description: 
   This is my Major League Hacking Fellowship portfolio. Take a look to the awesome projects a worked on during this explorer internship.
 baseurl: "/" 
-url: "https://saulmontesdeoca.github.io/mlh-fellowship-portfolio/" 
+url: "mlh-fellowship-portfolio/" 
 twitter_username: SaulMontesDeO10 
 github_username:  saulmontesdeoca
 
