--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: "Saul Montes De Oca"
 email: a01025975@itesm.mx
-description: 
+description: >- # this means to ignore newlines until "baseurl:"
   This is my Major League Hacking Fellowship portfolio. Take a look to the awesome projects a worked on during this explorer internship.
 baseurl: "/" 
-url: "mlh-fellowship-portfolio/" 
+url: "/mlh-fellowship-portfolio" 
 twitter_username: SaulMontesDeO10 
 github_username:  saulmontesdeoca
 
